@@ -1,3 +1,10 @@
+2005-03-23  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* select.C (check_alist): Fix warning.
+	(load_syntax): Fix typo in desctiption string.
+	* select.C, select.h (document): Newmember function.
+	* log_select.C (document_entries): Call it.
+
 2005-03-18  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* action_irrigate.C (ActionIrrigateSubsoilStart): Removed
